# Chameleon

./: .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  README.md  arrow.cmake  arrow_libs.cc  build.rs  helloworld.cpp  links.txt  vcpkg.json  vcpkg_configuration.json
.cargo/: config.toml
CMake/: FindArrowIncludeDirectories.py  FindArrowLibraries.py  FindArrowLibraryDirectories.py  GetInstalledPythonExecutable.cmake  GetPythonPackages.cmake  dlls.py  tmp.py
cpp/: helloworld.cpp  main.cpp
crates/chameleon/: Cargo.toml  build.rs  conanfile.txt
crates/chameleon-format-dialog/: Cargo.toml  build.rs
crates/chameleon-format-dialog/cpp/: format.cpp  locale.cpp  locale.h
crates/chameleon-format-dialog/qml/: FormatDialog.qml
crates/chameleon-format-dialog/src/: format.rs  lib.rs  locale_selector_model.rs  model.rs  notion_selector_model.rs  number_sign_display_selector_model.rs
crates/chameleon/cpp/: CMakeLists.txt  enums.h  format.cpp  format.h  icu_includes.h  locale.cpp  locale.h  vcpkg.json
crates/chameleon/cpp/dialogs/format_dialog/: format.cpp  format.h  locale.cpp  locale.h
crates/chameleon/cpp/includes/: icu_includes.h
crates/chameleon/src/: cxxqt_object.rs  dialogs.rs  format.rs  locale.rs  main.rs  python_dataframe_model.rs  table_model.rs
crates/chameleon/src/dialogs/: format_dialog.rs
crates/chameleon/src/dialogs/format_dialog/: format.rs  format_dialog_model.rs  locale.rs  locale_selector_model.rs  notion_selector_model.rs  number_sign_display_selector_model.rs
crates/chameleon_settings/: Cargo.toml
crates/chameleon_settings/src/: find_settings_file.rs  global_settings.rs  lib.rs
crates/cxx-qt-lib-additions/: Cargo.toml  build.rs
crates/cxx-qt-lib-additions/src/: lib.rs  qt_enums.rs
qml/: CMakeLists.txt  FormatDialog.qml  main.qml
rust/crates/build-utils/: Cargo.toml
rust/crates/build-utils/src/: lib.rs
rust/crates/chameleon/: Cargo.toml  build.rs
rust/crates/chameleon-format-dialog/: Cargo.toml  build.rs
rust/crates/chameleon-format-dialog/cpp/: CMakeLists.txt  clion.txt  format.cpp  format.h  locale.cpp  locale.h  units.cpp  units.h
rust/crates/chameleon-format-dialog/cpp/includes/: icu_includes.h
rust/crates/chameleon-format-dialog/qml/: FormatDialog.qml
rust/crates/chameleon-format-dialog/src/: format.rs  lib.rs  locale.rs  locale_selector_model.rs  model.rs  notion_selector_model.rs  number_sign_display_selector_model.rs  unit_selector_model.rs  units.rs
rust/crates/chameleon/qml/: main.qml
rust/crates/chameleon/src/: default_table.rs  lib.rs  python_dataframe_model.rs  table_manager_model.rs  table_model.rs  time_and_dates.rs
rust/crates/chameleon_bin/: Cargo.toml
rust/crates/chameleon_bin/src/: main.rs
rust/crates/chameleon_settings/src/: find_settings_file.rs  settings_file_name.rs
rust/crates/cxx-qt-lib-additions/src/: qt_enums.rs
src/: main.rs  table_model.rs
