[workspace]
members = ["xtask/", "crates/*"]
resolver = "3"

[workspace.dependencies]
cxx = "1.0.184"
cxx-qt = "0.7.2"
cxx-qt-lib = { version="0.7.2", features = ["qt_full"] }
pyo3 = { version = "0.25.1", features = ["extension-module", "auto-initialize", "abi3", "macros"] }
polars = { version = "0.51.0", features = ["timezones"] }
pyo3-polars = "0.24.0"
chrono = { version = "0.4.42" }
chrono-tz = { version = "0.10.4", features = ["case-insensitive"]}
cxx-qt-lib-additions = { path = "crates/cxx-qt-lib-additions"}

# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { version = "0.7.2", features = [ "link_qt_object_files" ] }

