[workspace]
members = ["rust/xtask", "rust/crates/*"]
resolver = "3"

[workspace.dependencies]
cxx = "1.0.186"
cxx-qt = {path = "../cxx-qt/crates/cxx-qt" }
cxx-qt-lib = { path = "../cxx-qt/crates/cxx-qt-lib", features = ["qt_full"] }
pyo3 = { version = "0.25.1", features = ["extension-module", "auto-initialize", "abi3", "macros"] }
polars = { version = "0.51.0", features = ["timezones"] }
pyo3-polars = "0.24.0"
chrono = { version = "0.4.42" }
chrono-tz = { version = "0.10.4", features = ["case-insensitive"]}
cxx-qt-lib-additions = { path = "rust/crates/cxx-qt-lib-additions" }
icu = {version = "2.0.0", features = ["experimental", "datagen", "compiled_data"]}

# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { path = "../cxx-qt/crates/cxx-qt-build", features = [ "link_qt_object_files" ] }
cxx-build = { version = "1.0.186" }
serde_json = { version = "1.0.145", features = ["indexmap"] }
serde = {version = "1.0.228", features = ["derive"]}
chameleon_settings = { path = "rust/crates/chameleon_settings" }
chameleon-format-dialog = {path = "rust/crates/chameleon-format-dialog" }
chameleon = {path = "rust/crates/chameleon" }
vcpkg = { version = "0.2.15" }
build-utils = { path = "rust/crates/build-utils" }





