[package]
name = "chameleon"
version = "0.1.0"
edition = "2024"

authors = [
    "Peter Lennartz <peter.lennartz@gmail.com>"
]
license = "MIT OR Apache-2.0"

[dependencies]
cxx = { workspace = true }
cxx-qt = { workspace = true }
cxx-qt-lib = { workspace = true }
pyo3 = { workspace = true }
polars = { workspace = true }
pyo3-polars = {workspace = true }
chrono = { workspace = true }
chrono-tz = { workspace = true }
cxx-qt-lib-additions = { workspace = true }
serde_json = {workspace = true}
chameleon_settings = { workspace = true }
chameleon-format-dialog = {workspace = true}


[build-dependencies]
# The link_qt_object_files feature is required for statically linking Qt 6.
cxx-qt-build = { workspace = true }
cxx-build = {workspace = true}
chameleon_settings = {workspace = true}
serde_json = {workspace = true}
vcpkg = {workspace = true}


[package.metadata.vcpkg]
git = "https://github.com/pml76/vcpkg.git"
rev = "1d195a1b4e32bdc23579375287cb5a79a9698380"   # branch with icu 77.1. otherwise standard snapshot
dependencies = ["icu"]

[package.metadata.vcpkg.target]
x86_64-pc-windows-msvc = { triplet = "x64-windows-static-md" }

